validation-test/compiler_crashers_2_fixed/0111-rdar33067102.swift
@@ -1,4 +1,4 @@
-// RUN: not %target-swift-frontend -swift-version 4 %s -typecheck
+// RUN: %target-swift-frontend -swift-version 4 %s -typecheck
 
 func flatterMap(_ records: [(Int)]) -> [Int] {
   records.flatMap { _ in return 1 } // expected-note {{}}
